[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/InventoryUI.gd" type="Script" id=1]
[ext_resource path="res://Assets/Graphics/World/ItemSheet.png" type="Texture2D" id=2]
[ext_resource path="res://Assets/Fonts/Xolonium-Regular.ttf" type="FontFile" id=3]

[sub_resource type="FontFile" id=1]
size = 5
font_data = ExtResource( 3 )

[sub_resource type="FontFile" id=2]
size = 5
font_data = ExtResource( 3 )

[node name="InventoryUI" type="Control"]
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2( 0.75, 0.75 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 38.0
offset_bottom = 36.0
color = Color( 0.564706, 0.564706, 0.564706, 0.498039 )

[node name="GridContainer" type="GridContainer" parent="."]
offset_left = 2.0
offset_top = 2.0
offset_right = 40.0
offset_bottom = 40.0
columns = 2

[node name="WeaponSprite" type="Sprite2D" parent="GridContainer"]
texture = ExtResource( 2 )
centered = false
hframes = 16
vframes = 128

[node name="ArmorSprite" type="Sprite2D" parent="GridContainer"]
position = Vector2( 18, 0 )
texture = ExtResource( 2 )
centered = false
hframes = 16
vframes = 128
frame = 59

[node name="DamageLabel" type="Label" parent="."]
offset_left = 1.0
offset_top = 18.0
offset_right = 9.0
offset_bottom = 25.0
custom_fonts/font = SubResource( 1 )
text = "D: "

[node name="ArmorClassLabel" type="Label" parent="."]
offset_left = 18.0
offset_top = 18.0
offset_right = 32.0
offset_bottom = 26.0
custom_fonts/font = SubResource( 2 )
text = "AC: "
